human-intervention-logs/io.netty.incubator:netty-incubator-codec-classes-quic:0.0.65.Final/gradle-test/gradle-test-2026-05-05T01-20-57-209479Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.netty.incubator:netty-incubator-codec-classes-quic:0.0.65.Final
Command: `/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/tests/src/io.netty.incubator/netty-incubator-codec-classes-quic/0.0.65.Final/src/test/java/io_netty_incubator/netty_incubator_codec_classes_quic/Netty_incubator_codec_classes_quicTest.java:277: error: constructor QuicHeaderParser in class QuicHeaderParser cannot be applied to given types;
            assertNativeBackedTypeUnavailable(() -> new QuicHeaderParser(0, 4));
                                                    ^
  required: int
  found:    int,int
  reason: actual and formal argument lists differ in length
/home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/tests/src/io.netty.incubator/netty-incubator-codec-classes-quic/0.0.65.Final/src/test/java/io_netty_incubator/netty_incubator_codec_classes_quic/Netty_incubator_codec_classes_quicTest.java:295: error: constructor QuicHeaderParser in class QuicHeaderParser cannot be applied to given types;
        try (QuicHeaderParser parser = new QuicHeaderParser(0, destinationConnectionId.length)) {
                                       ^
  required: int
  found:    int,int
  reason: actual and formal argument lists differ in length
2 errors

FAILURE: Build failed with an exception.

* What went wrong:

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/tests/src/io.netty.incubator/netty-incubator-codec-classes-quic/0.0.65.Final/build/reports/problems/problems-report.html
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/tests/src/io.netty.incubator/netty-incubator-codec-classes-quic/0.0.65.Final/src/test/java/io_netty_incubator/netty_incubator_codec_classes_quic/Netty_incubator_codec_classes_quicTest.java:277: error: constructor QuicHeaderParser in class QuicHeaderParser cannot be applied to given types;
              assertNativeBackedTypeUnavailable(() -> new QuicHeaderParser(0, 4));
                                                      ^
    required: int
    found:    int,int
    reason: actual and formal argument lists differ in length
  /home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/tests/src/io.netty.incubator/netty-incubator-codec-classes-quic/0.0.65.Final/src/test/java/io_netty_incubator/netty_incubator_codec_classes_quic/Netty_incubator_codec_classes_quicTest.java:295: error: constructor QuicHeaderParser in class QuicHeaderParser cannot be applied to given types;
          try (QuicHeaderParser parser = new QuicHeaderParser(0, destinationConnectionId.length)) {
                                         ^
    required: int
    found:    int,int
    reason: actual and formal argument lists differ in length
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge4/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5180-b16f88c6/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.netty.incubator:netty-incubator-codec-classes-quic:0.0.65.Final failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
